--- a/style.css
+++ b/style.css
@@ -1,25 +1,59 @@
 body {
-    background-color: gray;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;  
 }
 
-.item{
+a {
+    color: white
+}
+
+li {
+    list-style-type: none;
+}
+
+.landing {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    color: #fff;
+}
+
+.landing-content {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    position: absolute;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    border: 1px solid rgb(2, 2, 2);
 }
 
-.item2{
-    background-color: white;
-    grid-column-start: 1;
-    grid-column-end: 4;
-
+.landing > video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.25);
 }
 
-.grid{
-    padding: 10px;
-    background-color: rgb(39, 156, 156);
-    display: inline-grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-template-rows: repeat(12, 50px) ;
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 40px;
 }
+
+.nav > ul {
+    display: flex;
+    gap: 50px;
+    & >li > a{
+        text-decoration: none;
+    }
+
+    & >li >a:hover {
+        color: rgba(255, 255, 255, 0.25);
+        border-bottom: 2px solid rgba(255, 255, 255, 0.25);;
+    }
+}
+
+
+
